refactoring stiri